[package]
name = "pr-szafy"
version = "0.1.0"
authors = ["marcin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/bsteinb/rsmpi", rev = "f9aec8b8d82" }
ansi_term = "0.12"
crossbeam = "0.7"
rand = "0.7"
ctrlc = "3.1"
